--- a/go.html
+++ b/go.html
@@ -2,43 +2,69 @@
 <html lang="de">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>CrunchClub · Weiterleitung…</title>
+<title>Restaurant · Loader</title>
 <style>
-  :root{--fg:#e6eaf0; --muted:#9ca3af; --accent:#f59e0b; --bg:#0b0f1a; --card:#101726; --stroke:#1f2937}
-  html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font:16px system-ui,sans-serif}
-
-  /* PRELOADER: solide, sofort sichtbar, keine teuren Effekte */
-  .pre{position:fixed;inset:0;z-index:9999;display:grid;place-items:center;background:var(--bg);opacity:1}
-  .pre.hide{animation:fade .45s ease forwards}
-  @keyframes fade{to{opacity:0;visibility:hidden}}
-
-  .card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;padding:22px;min-width:280px;
-        box-shadow:0 8px 24px rgba(0,0,0,.35)}
+  :root{
+    --bg1:#0c0f17; --bg2:#0a0e15; --card:#0e1524cc; --stroke:#1f2a37; --muted:#9aa4b2; --fg:#e6eaf0;
+    --accent:#22d3ee; /* wird per Theme überschrieben */
+  }
+  html,body{height:100%;margin:0;background:radial-gradient(1200px 600px at 50% -10%,#0e1522 0%,#0b0f14 60%,#070b10 100%);color:var(--fg);font:15px ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
+  /* ==== PRELOADER ==== */
+  .pre{position:fixed;inset:0;z-index:9999;display:grid;place-items:center;backdrop-filter:blur(3px)}
+  .grid{position:absolute;inset:0;opacity:.18;pointer-events:none;mask-image:radial-gradient(60% 60% at 50% 30%,#000 40%,transparent 100%)}
+  .grid:before{content:"";position:absolute;inset:-200% -200% 0 -200%;
+    background:radial-gradient(circle at 24px 24px,#0f1a2a 2px,transparent 3px) 0 0/48px 48px;
+    animation: drift 18s linear infinite}
+  @keyframes drift{to{transform:translateY(-48px)}}
+  .card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;padding:22px 22px 18px;box-shadow:0 10px 32px rgba(0,0,0,.40);min-width:300px;max-width:420px}
   .top{display:flex;gap:14px;align-items:center}
-  .title{font-weight:700}
+  .title{font-weight:700;letter-spacing:.2px}
   .muted{color:var(--muted)}
-  .icon{width:56px;height:56px;display:grid;place-items:center}
-
-  /* Ramen-Dampf + fallback Spinner für super-frühen Paint */
-  .ramen-steam path{stroke:var(--accent);stroke-width:2;fill:none;stroke-linecap:round;
-                    stroke-dasharray:40 120;animation:steam 2s ease-in-out infinite}
+  .badge{margin-left:auto;font-size:12px;border:1px solid var(--stroke);border-radius:999px;padding:4px 8px;background:#0b1320}
+  .meter{height:8px;background:#0f1a2a;border:1px solid #192334;border-radius:999px;overflow:hidden;margin-top:12px}
+  .bar{height:100%;width:0;background:linear-gradient(90deg,var(--accent),#60efff);transition:width .2s ease}
+  .note{margin-top:10px}
+  .pre.hide{animation:fade .6s ease forwards}
+  @keyframes fade{to{opacity:0;visibility:hidden}}
+  /* ==== ICON WRAPPER ==== */
+  .icon{width:64px;height:64px;display:grid;place-items:center;border-radius:14px;background:linear-gradient(145deg,#0f172a,#0b1320);border:1px solid #172033;box-shadow:inset 0 0 0 1px #0b1624}
+  /* ==== THEMES ==== */
+  [data-theme="ramen"]{--accent:#f59e0b}
+  [data-theme="taco"]{--accent:#22c55e}
+  [data-theme="fries"]{--accent:#fb7185}
+  /* Ramen: Schüssel + dampfende Nudel-Swirls */
+  .ramen-steam path{stroke:var(--accent);stroke-width:2;fill:none;stroke-linecap:round;stroke-dasharray:40 120;animation:steam 2.2s ease-in-out infinite}
   .ramen-steam path:nth-child(2){animation-delay:.25s}
   .ramen-steam path:nth-child(3){animation-delay:.5s}
   @keyframes steam{0%{stroke-dashoffset:0;opacity:.2}50%{opacity:1}100%{stroke-dashoffset:-160;opacity:.2}}
   .ramen-bowl{fill:none;stroke:#3b4a5e;stroke-width:2}
-
-  /* Minimaler CSS-Spinner (falls SVG anim noch nicht läuft) */
-  .spin{width:18px;height:18px;border:3px solid #243142;border-top-color:var(--accent);
-        border-radius:50%;animation:rot 1s linear infinite;margin-left:auto}
-  @keyframes rot{to{transform:rotate(360deg)}}
+  /* Taco: Shell rotiert sanft, Füllung bounct */
+  .taco-shell{fill:none;stroke:var(--accent);stroke-width:2;filter:drop-shadow(0 0 10px rgba(34,197,94,.25))}
+  .taco-fill{fill:#2dd4bf;transform-origin:32px 40px;animation:fillbounce 1.3s ease-in-out infinite}
+  @keyframes fillbounce{50%{transform:translateY(-2px)}}
+  .taco-rot{transform-origin:32px 36px;animation:trot 3.4s ease-in-out infinite}
+  @keyframes trot{50%{transform:rotate(-8deg)}}
+  /* Fries: Stäbchen wachsen als „Progress“ + warmer Glow */
+  .fries path{stroke:var(--accent);stroke-width:3;stroke-linecap:round}
+  .fries .f{transform-origin:8px 16px;animation:up 1.2s ease-in-out infinite}
+  .fries .f:nth-child(2){animation-delay:.15s}
+  .fries .f:nth-child(3){animation-delay:.3s}
+  @keyframes up{50%{transform:translateY(-3px)}}
+  .box{fill:none;stroke:#3b4a5e;stroke-width:2}
+  /* ==== MAIN CONTENT (deine Seite) ==== */
+  main{min-height:100%;display:grid;place-items:center;padding:24px}
+  .content{opacity:0;transform:translateY(6px);transition:opacity .4s ease, transform .4s ease}
+  .content.show{opacity:1;transform:none}
+  .kicker{font-size:13px;color:#9aa4b2}
 </style>
 <body>
-  <!-- SOFORT sichtbarer Loader -->
-  <div class="pre" id="pre" style="display:grid">
-    <div class="card">
+  <div class="pre" id="pre">
+    <div class="grid"></div>
+    <div class="card" id="card" data-theme="ramen">
       <div class="top">
-        <div class="icon" aria-hidden="true">
-          <svg width="56" height="56" viewBox="0 0 64 64">
+        <div class="icon">
+          <!-- SVGs: alle vorhanden, wir blenden je nach Theme ein -->
+          <svg class="svg ramen" width="64" height="64" viewBox="0 0 64 64" aria-hidden="true">
             <g class="ramen-steam">
               <path d="M18 22 C22 18, 28 18, 32 22"/>
               <path d="M26 18 C30 14, 36 14, 40 18"/>
@@ -46,65 +72,149 @@
             </g>
             <path class="ramen-bowl" d="M14 32 q18 12 36 0 v4 a22 22 0 0 1-36 0z"/>
           </svg>
+
+          <svg class="svg taco" width="64" height="64" viewBox="0 0 64 64" aria-hidden="true" style="display:none">
+            <g class="taco-rot">
+              <path class="taco-shell" d="M16 40 a16 16 0 0 1 32 0"/>
+              <circle class="taco-fill" cx="32" cy="40" r="10"/>
+            </g>
+          </svg>
+
+          <svg class="svg fries" width="64" height="64" viewBox="0 0 64 64" aria-hidden="true" style="display:none">
+            <g class="fries">
+              <path class="f" d="M20 20 v18"/>
+              <path class="f" d="M28 18 v20"/>
+              <path class="f" d="M36 22 v16"/>
+              <path class="f" d="M44 19 v19"/>
+            </g>
+            <path class="box" d="M16 36 l4 12 h24 l4-12"/>
+          </svg>
         </div>
         <div>
-          <div class="title">Küche heizt an…</div>
-          <div class="muted">Ramen wird vorbereitet</div>
+          <div class="title" id="title">Küche heizt an…</div>
+          <div class="muted" id="subtitle">Ramen wird vorbereitet</div>
         </div>
-        <div class="spin" aria-hidden="true"></div>
+        <span class="badge" id="badge">0%</span>
       </div>
+      <div class="meter"><div class="bar" id="bar"></div></div>
+      <div class="note muted" id="note">Frische Zutaten, heiß serviert.</div>
     </div>
   </div>
 
+  <main>
+    <div class="content" id="app">
+      <h1 style="margin:0 0 6px">Willkommen</h1>
+      <p class="kicker">Der Loader war nur das Intro. Inhalt kommt hier.</p>
+    </div>
+  </main>
+
 <script>
 (function(){
-  // Ziel-URL (wie gehabt)
-  const Q = new URLSearchParams(location.search);
-  const VENUE = Q.get('venue_id') || 'crunchclub-zwickau';
-  const TOKEN = Q.get('token') || '';
+  const pre = document.getElementById('pre');
+  const app = document.getElementById('app');
+  const card = document.getElementById('card');
+  const bar = document.getElementById('bar');
+  const badge = document.getElementById('badge');
+  const title = document.getElementById('title');
+  const subtitle = document.getElementById('subtitle');
+  const note = document.getElementById('note');
+
+  const svgs = {
+    ramen: document.querySelector('.svg.ramen'),
+    taco: document.querySelector('.svg.taco'),
+    fries: document.querySelector('.svg.fries')
+  };
+
+  // Theme aus URL (z.B. ?theme=taco)
+  const params = new URLSearchParams(location.search);
+  const theme = (params.get('theme') || 'ramen').toLowerCase();
+  const valid = ['ramen','taco','fries'];
+  const t = valid.includes(theme) ? theme : 'ramen';
+  card.setAttribute('data-theme', t);
+
+  // Sichtbarkeit der SVGs + Texte
+  Object.values(svgs).forEach(s => s.style.display = 'none');
+  svgs[t].style.display = 'block';
+
+  const copy = {
+    ramen: {title:'Küche heizt an…', sub:'Ramen wird vorbereitet', note:'Frische Zutaten, heiß serviert.'},
+    taco:  {title:'Handmade in progress…', sub:'Taco wird gefüllt', note:'Knusprige Shell, saftige Füllung.'},
+    fries: {title:'Öl erreicht Temperatur…', sub:'Fries werden goldbraun', note:'Außen knusprig, innen fluffig.'}
+  }[t];
+
+  title.textContent = copy.title;
+  subtitle.textContent = copy.sub;
+  note.textContent = copy.note;
+
+  // --- Progress: läuft pseudo bis 90%, finish erst nach window.load ---
+  let p = 0, finished = false;
+  const tick = setInterval(()=>{
+    if (!finished) {
+      p = Math.min(90, p + Math.ceil(6 + Math.random()*10)); // bis 90%
+    } else {
+      p = Math.min(100, p + 4 + Math.floor(Math.random()*8)); // dann zügig auf 100
+    }
+    bar.style.width = p + '%';
+    badge.textContent = p + '%';
+  }, 180);
+
+  // Hilfen für robusten Paint vor Navigation (Chrome/Android)
+  const nextFrame = () => new Promise(r => requestAnimationFrame(()=>r()));
+  async function ensurePaintedFrames(n=2){ while(n--) await nextFrame(); }
+
+  // Redirect-Ziel (wie bei dir genutzt)
+  const VENUE = params.get('venue_id') || 'crunchclub-zwickau';
+  const TOKEN = params.get('token') || '';
   const APP  = 'https://script.google.com/macros/s/AKfycbzdDii900AOXGpJcp1kMnbV6Hk7VwMBMVHFKKceldOtGbamGqXRgzhR341mEDeCgrQ/exec';
 
   function getCID(){
     try{
       let id = localStorage.getItem('cc_client_id');
-      if(!id){ id = crypto.randomUUID(); localStorage.setItem('cc_client_id', id); }
+      if(!id){ id = (crypto && crypto.randomUUID) ? crypto.randomUUID()
+              : String(Date.now())+'-'+Math.random().toString(16).slice(2);
+        localStorage.setItem('cc_client_id', id);
+      }
       return id;
     }catch(e){ return ''; }
   }
-
   const cid = encodeURIComponent(getCID());
   const ua  = encodeURIComponent(navigator.userAgent || '');
 
-  // 1) Sofort sicherstellen, dass der Loader gepainted wird (Safari-iOS Workaround)
-  //    Kleine Verzögerung bis nach DOMContentLoaded -> garantiert erste Darstellung.
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', function(){
-      requestAnimationFrame(()=>{ /* NOP – erzwingt ersten Paint */ });
-    });
-  }
-
-  // 2) Erst nach *vollständigem* Laden (inkl. Bilder/Fonts) ausblenden und weiter
-  window.addEventListener('load', function(){
-    const pre = document.getElementById('pre');
-
-    // Ohne Token nicht weiterleiten (aber Loader ausblenden + Hinweis)
+  // Wenn alles geladen ist → Progress beenden, Loader ausblenden, redirect
+  window.addEventListener('load', async () => {
     if(!TOKEN){
-      pre.querySelector('.title').textContent = 'Fehlender Token';
-      pre.querySelector('.muted').textContent = 'Bitte QR erneut scannen.';
-      // Spinner entfernen, Loader stehen lassen (oder optional ausblenden)
-      pre.querySelector('.spin')?.remove();
+      clearInterval(tick);
+      title.textContent = 'Fehlender Token';
+      subtitle.textContent = 'Bitte QR erneut scannen.';
+      badge.style.display = 'none';
       return;
     }
 
-    // Sanft ausblenden und NACH der Animation weiterleiten
-    pre.classList.add('hide');
-    setTimeout(function(){
-      const url = `${APP}?venue_id=${encodeURIComponent(VENUE)}&token=${encodeURIComponent(TOKEN)}&client_id=${cid}&ua=${ua}`;
-      // replace, damit die Loader-Seite nicht im Verlauf bleibt
-      location.replace(url);
-    }, 460); // <= passend zur CSS-Animation .45s
+    finished = true;
+
+    // kurze Warte, bis 100% erreicht sind
+    const waitToFull = setInterval(()=>{
+      if(p >= 100){
+        clearInterval(waitToFull);
+        proceed();
+      }
+    }, 60);
   }, { once:true });
+
+  async function proceed(){
+    // Sicherstellen, dass min. ein Frame gerendert wurde (gegen „Black before nav“)
+    await ensurePaintedFrames(2);
+
+    // sanftes Ausblenden
+    pre.classList.add('hide');
+
+    // nach Fade redirect
+    setTimeout(()=>{
+      const url = `${APP}?venue_id=${encodeURIComponent(VENUE)}&token=${encodeURIComponent(TOKEN)}&client_id=${cid}&ua=${ua}`;
+      location.replace(url);
+    }, 620); // Deckung mit .6s Fade
+  }
 })();
 </script>
 </body>
-</html>
+</html> 
